sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:22: error: not found: value i
      i = getNombreValeurs()-2-compteur - j
      ^AlgCocktailSort1:24: error: not found: value i
      if(plusPetit(i+1,i))
                   ^AlgCocktailSort1:24: error: not found: value i
      if(plusPetit(i+1,i))
                       ^AlgCocktailSort1:26: error: not found: value i
        echange(i,i+1)
                ^AlgCocktailSort1:26: error: not found: value i
        echange(i,i+1)
                  ^